<resources>
    <string name="app_name">Headphones App</string>
    <string name="desc_headphone">This wireless headset from boAt delivers up to 8 hours of playtime with a single and complete charging session.This Bluetooth-enabled headset comes equipped with Bluetooth v5.0, which delivers instant connectivity.This ergonomic and aesthetically designed headset ensures that you make a style statement no matter where you go.The adjustable earcups of this boAt headset are padded so that you stay comfortable even after hours of use. \n\n
                                    Enjoy wired and wireless connection with AUX and Bluetooth connectivity.It boasts 40 mm dynamic drivers, which deliver immersive aural experience.If you are looking for a wallet-friendly wireless headset then this boAt headset is ideal for you. A complete charging session ensures that you receive a playback time of up to 8 hours. Moreover, it allows wired and wireless connectivity with AUX and Bluetooth. Furthermore, the earcups are adjustable, padded, and comfortable.</string>
    <string name="buy_now">BUY NOW</string>
    <string name="description">Description</string>
    <string name="_199_99">$ 199.99</string>
    <string name="wireless">Wireless</string>
    <string name="beats_ep">Beats Ep</string>
</resources>