<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    tools:context=".Screen.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_chevron_left_24"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_favorite_border_24"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!---Name,Type and Price -->

            <LinearLayout
                android:id="@+id/detailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beats_ep"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.75"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/wireless"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_199_99"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <!---imageview and list -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                android:gravity="center"
                android:weightSum="1"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/red_headphone"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/headphone_items"
                        tools:itemCount="4"/>

                </LinearLayout>

            </LinearLayout>

            <!---description and buy now button -->

            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.75"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/desc_headphone"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_now"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:drawableTint="@color/black"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_semibold"
                    tools:targetApi="m" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>